opam-version: "1.2"
name: "hardcaml-incrementally"
maintainer: "Andy Ray <andy.ray@ujamjar.com>"
authors: [ "Andy Ray" ]
license: "ISC"
homepage: "https://github.com/ujamjar/hardcaml-incrementally"
bug-reports: "https://github.com/ujamjar/hardcaml-incrementally/issues"
dev-repo: "https://github.com/ujamjar/hardcaml-incrementally.git"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "hardcaml" { >= "1.2.0" & < "2.0.0" }
  "incremental_kernel"
]
version: "0.1.0"
license: "ISC"
